--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
 {erl_opts, [debug_info]}.
 
 {deps, [{meck, ".*", {git, "https://github.com/eproxus/meck.git", "master"}},
-        {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", "master"}}]}.
+        {jsx, ".*", {git, "git://github.com/talentdeficit/jsx.git", "master"}},
+        {lhttpc, ".*", {git, "git://github.com/esl/lhttpc.git", "master"}}
+]}.
